--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+
+.holder{
+	display: grid;
+	justify-content: center;
+	align-items: center;
+	
+}
+
+.item{
+	display: grid;
+	grid-gap: 20px;
+	grid-template-columns: repeat(2, 1fr 2fr);
+}
