--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,12 @@
 	display: grid;
 	justify-content: center;
 	align-items: center;
-	
+	grid-template-rows: 100px 100px;
+	grid-template-columns: 100px 100px;
 }
 
 .item{
 	display: grid;
 	grid-gap: 20px;
-	grid-template-columns: repeat(2, 1fr 2fr);
+	
 }
